--- a/projects/28-jsProjects/0-fiftyProjects/37-drag+drop.html
+++ b/projects/28-jsProjects/0-fiftyProjects/37-drag+drop.html
@@ -23,26 +23,38 @@
       top: 200px;
     }
 
-    #trash {
+    #trashDiv {
       position: absolute;
       height: 100px;
       width: 100px;
       background: #222;
-      left: 500px;
+      left: 200px;
       top: 300px;
+    }
+
+    #trash {
+      position: absolute;
+      height: 10px;
+      width: 10px;
+      background: #111;
+      top: 45px;
+      left: 45px;
     }
   </style>
 </head>
 
 <body>
   <!-- Started at 10:19AM/Dec21/2020 -->
-  <!-- Coded for 2 hours -->
+  <!-- Coded for 4 hours -->
+  <!-- Finished at 4:14PM/Dec22/2020 -->
   <div class="copyMe">JavaScript</div>
   <div class="copyMe">WordPress</div>
   <div class="copyMe">Python</div>
   <div class="copyMe">React</div>
   <div class="copyMe">Vue</div>
-  <div id="trash"></div>
+  <div id="trashDiv">
+    <div id="trash"></div>
+  </div>
 
   <script>
     /*
@@ -92,8 +104,8 @@
             - update el top equalling it to  (el.offsetTop - pos.oldY) + "px"
             - update el left equalling it to  (el.offsetLeft - pos.oldX) + "px"
             - if isCollide(el) true, then...
-              - CLO "OVER"
-              - else CLO "OK"
+              - CLO "OVER" & set el.onmousedown to null
+              - removeChild(el) from parentElement el
       6. select the element with the "trash" id and "a" for property
         - setup aRect which equals to a.getBoundingClientRect()
         - setup bRect which equals to trash.getBoundingClientRect() & CLO aRect
@@ -134,7 +146,7 @@
           function dragMouse(e) {
             pos.newX = e.clientX;
             pos.newY = e.clientY;
-            console.log(pos.newX, pos.newY);
+            // console.log(pos.newX, pos.newY);s
             document.onmouseup = () => {
               document.onmouseup = null;
               document.onmousemove = null;
@@ -145,9 +157,8 @@
               pos.newX = e.clientX;
               pos.newY = e.clientY;
               if (isCollide(el)) {
-                console.log('over');
-              } else {
-                console.log('ok');
+                el.onmousedown = null;
+                el.parentElement.removeChild(el);
               }
               el.style.top = (el.offsetTop - pos.oldY) + "px";
               el.style.left = (el.offsetLeft - pos.oldX) + "px";
@@ -161,7 +172,7 @@
     function isCollide(el) {
       let aRect = el.getBoundingClientRect();
       let bRect = trash.getBoundingClientRect();
-      console.log(aRect);
+      // console.log(aRect);
       return !(
         (aRect.bottom < bRect.top) ||
         (aRect.top > bRect.bottom) ||
