--- a/projects/28-jsProjects/0-fiftyProjects/38-boxChaser.html
+++ b/projects/28-jsProjects/0-fiftyProjects/38-boxChaser.html
@@ -8,7 +8,7 @@
   <style>
     .gameArea {
       width: 800px;
-      height: 300px;
+      height: 600px;
     }
 
     .score {
@@ -19,7 +19,7 @@
       position: absolute;
       width: 100px;
       height: 100px;
-      background: red;
+      background-color: red;
     }
 
     .square {
@@ -33,6 +33,11 @@
       line-height: 100px;
       font-size: 24px;
       color: #ddd;
+    }
+
+    .active {
+      background-color: green;
+      color: white;
     }
   </style>
 </head>
@@ -77,7 +82,12 @@
           - in it,  37:"left",38:"up",39:"right",40:"down"
         - if allowKey[e.keyCode] exists then handleKeyPress()
       10. HandleKeyPress function & pass in the value of "key"
-        - CLO key
+        - for RIGHT/LEFT >> if (key === "left/right") {
+          box.x/y -= player.speed;
+          player.square--;(UP/DOWN player.square-= gamebox.x/y;)
+        - box.style.left/right = box.x/y + "px";
+          
+      }
     */
     let box = {};
     const score = document.querySelector('.score');
@@ -94,8 +104,6 @@
 
     document.addEventListener('DOMContentLoaded', build);
     document.addEventListener('keyup', (e) => {
-      console.log(e.keyCode);
-
       let allowKey = {
         37: "left", 38: "up", 39: "right", 40: "down"
       }
@@ -103,18 +111,37 @@
     })
 
     function handleKeyPress(key) {
-      console.log(key);
+      if (key === "left") {
+        box.x -= player.speed;
+        player.square--;
+      }
+      if (key === "right") {
+        box.x += player.speed;
+        player.square++;
+      }
+      if (key === "down") {
+        box.y += player.speed;
+        player.square += gamebox.x;
+      }
+      if (key === "up") {
+        box.y -= player.speed;
+        player.square -= gamebox.x;
+      }
+      box.style.left = box.x + "px";
+      box.style.top = box.y + "px";
+      console.log(player.square);
+
     }
 
     function build() {
       box = document.createElement('div');
       box.classList.add('box');
-      box.x = gameArea.left;
       box.y = gameArea.top;
+      box.x = gameArea.left;
       box.top = box.y + "px";
       box.left = box.x + "px";
       gameAreaEle.appendChild(box);
-      console.log(box);
+      // console.log(box);
       let counter = 1;
       for (let y = 0; y < gamebox.y; y++) {
         for (let x = 0; x < gamebox.x; x++) {
