--- a/projects/28-jsProjects/0-fiftyProjects/38-boxChaser.html
+++ b/projects/28-jsProjects/0-fiftyProjects/38-boxChaser.html
@@ -7,27 +7,26 @@
   <title>Box Chaser</title>
   <style>
     body {
+      font-family: sans-serif;
       text-align: center;
     }
 
     .gameArea {
       width: 800px;
       height: 600px;
-    }
-
-    .score {
-      font-size: 2em;
+      background-color: teal;
+      color: white;
     }
 
     .box {
       position: absolute;
       width: 100px;
       height: 100px;
-      background-color: red;
+      background-color: tomato;
     }
 
     .box2 {
-      background-color: blue;
+      background-color: orange;
       position: absolute;
       width: 100px;
       height: 100px;
@@ -43,45 +42,47 @@
       vertical-align: middle;
       line-height: 100px;
       font-size: 24px;
-      color: #ddd;
     }
 
     .active {
       background-color: green;
-      color: white;
     }
 
-    .flex {
+    .grid {
       width: 800px;
-      display: flex;
-      justify-content: space-between;
+      color: white;
+      display: grid;
+      grid-template-columns: 3fr 1fr 1fr 3fr;
     }
 
-    .border {
-      border: 1px solid #ddd;
-      padding: 2px 10px;
-      width: 78px;
-      font-weight: bold;
+    .grid>* {
+      margin: 1px;
+      padding: 5px 10px;
+      font-size: 1.5em;
     }
 
-    .red {
-      color: red;
+    .tomato {
+      background: tomato;
     }
 
-    .blue {
-      color: blue;
+    .orange {
+      background: orange;
     }
   </style>
 </head>
 
 <body>
   <!-- Started at 4:38PM/Dec22/2020 -->
-  <!-- Coded for 6 hours -->
-  <!-- Finished at 12:42APM/Dec25/2020 -->
+  <!-- Coded for 7 hours -->
+  <!-- Finished at 11:42AM/Dec26/2020 -->
   <div class="gameArea"></div>
-  <div class="flex">
-    <div class="border red">Red: <span class="score">0</span></div>
-    <div class="border blue">Blue: <span class="score score2">0</span></div>
+  <div class="grid">
+
+    <div class="tomato">Press: 4, 8, 6, 2</div>
+    <div class="border tomato score">0</div>
+    <div class="border orange score2">0</div>
+    <div class="orange">Press: W, A, S, D</div>
+
   </div>
 
   <script>
