--- a/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
+++ b/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
@@ -43,6 +43,9 @@
     /*
       1. forEach to btns w/ func(btn)
         - CLO btn & addeventlistener to btn w/ "btnAction" func
+      2. addEveLis to doc with "DOMContentLoaded" w/ anonymous func
+        - const now to get new Date();
+        - let nextWeek which equals to (now.getDate()+7) & CLO nextWeek
       2. create func btnAction and pass in event object (e)
         - CLO e.srcElement.innerText.indexOf(" ") (index num of space)
         - all we need is set, get, delete, and so we need to slice that...
