--- a/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
+++ b/projects/28-jsProjects/0-fiftyProjects/39-cookie.html
@@ -46,7 +46,14 @@
       2. addEveLis to doc with "DOMContentLoaded" w/ anonymous func
         - const now to get new Date();
         - let nextWeek which equals to (now.getDate()+7) & CLO nextWeek
-      2. create func btnAction and pass in event object (e)
+        - the date has to be 2 characters (dd) but if there is only 1, 
+          that'll throw an error so we need to fix that...
+        - let day and take nextWeek and add "0" to it and slice(-2) it = returns 2 char
+        - let month copy the value of day and replace nextweek w/ (now.getMonth()+1)
+        - let year equals now.getFullYear();
+        - select input[type=date].value equals to backticks year-month-day
+        - CLO month,day,year
+      3. create func btnAction and pass in event object (e)
         - CLO e.srcElement.innerText.indexOf(" ") (index num of space)
         - all we need is set, get, delete, and so we need to slice that...
         - var temp e.srcElement.innerText.substr(returns a part of the string)(0.e.srcElement.innerText.indexOf(" ")) & CLO temp
@@ -56,6 +63,15 @@
       // console.log(btn);
       btn.addEventListener('click', btnAction);
     });
+    document.addEventListener("DOMContentLoaded", () => {
+      const now = new Date();
+      let nextWeek = (now.getDate() + 7);
+      let day = ("0" + nextWeek).slice(-2);
+      let month = ("0" + (now.getMonth() + 1)).slice(-2);
+      let year = now.getFullYear();
+      document.querySelector("input[type=date]").value = `${year}-${month}-${day}`;
+      console.log(month, day, year);
+    })
     function btnAction(e) {
       // console.log(e.srcElement.innerText.indexOf(" "));
       let temp = e.srcElement.innerText.substr(0, e.srcElement.innerText.indexOf(" "));
